classDiagram
    class User {
        +username: String
        +email: String
        +password_hash: String
        +is_active: Boolean
        +set_password()
        +check_password()
        +roles()
        +permissions()
    }

    class Customer {
        +name: String
        +phone: String
        +email: String
        +address: Text
        +notes: Text
    }

    class Ticket {
        +status: String
        +priority: String
        +estimated_cost: Decimal
        +actual_cost: Decimal
        +customer_notes: Text
        +get_status_display()
    }

    class Device {
        +brand: String
        +model: String
        +serial_number: String
        +imei: String
        +status: String
        +generate_barcode()
    }

    class Part {
        +sku: String
        +brand: String
        +category: String
        +name: String
        +stock: Integer
        +cost: Decimal
        +generate_sku()
    }

    class RepairPart {
        +quantity: Integer
        +installed_at: DateTime
        +notes: Text
    }

    class Role {
        +name: String
        +description: Text
    }

    class Permission {
        +name: String
        +code: String
    }

    class AuditLog {
        +action: String
        +details: Text
        +ip_address: String
        +log_change()
        +log_simple_event()
    }

    User "1" --> "0..*" AuditLog
    User "1" --> "0..*" Customer: created_by
    User "1" --> "0..*" Customer: updated_by
    User "1" --> "0..*" Ticket: created_by
    User "0..1" --> "0..*" Ticket: assigned_technician
    User "1" --> "0..*" RepairPart: technician

    Customer "1" --> "0..*" Ticket

    Ticket "1" --> "0..*" Device

    Device "1" --> "0..*" RepairPart
    Part "1" --> "0..*" RepairPart

    Role "1" --> "0..*" Permission
    User "1" --> "0..*" Role: roles()